# django-store-skillbox

./: devices.csv  orders.csv  requirements.txt
mysite/: .env  .env.template  Dockerfile  db.sqlite3  demo.py  docker-compose.yaml  log.txt  pyproject.toml  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_articlevideo.py
mysite/blogapp/templates/blogapp/: article_list.html  article_video_list.html  articlevideo_detail.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0002_profile_avatar.py  0003_remove_profile_avatar_profileavatar.py  0004_profile_avatar_delete_profileavatar.py
mysite/myauth/templates/myauth/: about-me.html  profile_update_form.html  user-detail.html  user_update_form.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  selecting_fields.py
mysite/shopapp/migrations/: 0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options_and_more.py
(+6 files in other folders)
